Bug 49340 - CRASH closing window Edit > Changes > Accept or Reject with ESC
Summary: CRASH closing window Edit > Changes > Accept or Reject with ESC
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.6.0
Keywords: regression
: 49364 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-05-01 07:35 UTC by Cor Nouws
Modified: 2012-05-08 06:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-05-01 07:35:29 UTC
- start new document
- open window Edit > Changes > Accept or Reject 
   ( make sure it is selected - with the mouse)
- ESC to close it
  > whoops : whole office disappears
Comment 1 Cor Nouws 2012-05-01 07:36:30 UTC
found in version 3.6.0alpha0+ Build ID: 87897ea

Was OK in daily build from 2012-04-17
Comment 2 Julien Nabet 2012-05-01 11:41:43 UTC
I can't reproduce this on Debian x86-64. Perhaps I missed something.
I only noticed that ESC didn't work to remove the Accept/Reject window. I must click on main LO window then click again on Accept/Reject window then ESC works.

Other thing, I noticed some messages on console when I select Accept/Reject the first time :
warn:legacy.osl:10614:1:/home/julien/compile-libreoffice/libo/tools/source/rc/resmgr.cxx:796: file:///home/julien/compile-libreoffice/libo/solver/unxlngx6/installation/opt/program/../program/resource/svxen-US.res
Class: 273, Id: 11. Cannot load resource! 
Resource Stack
Class: 372, Id: 10643
Comment 3 Not Assigned 2012-05-05 09:07:21 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33880a63fef2abf126163186d81c204d965031a6

Resolves: fdo#49340 GetFocus during dtoring causes reentry to dying window
Comment 4 Caolán McNamara 2012-05-05 09:23:06 UTC
caolanm->Cor: you had some other bug which was very like this hitting ESC in autocorrect options, which I couldn't reproduce at the time. It must be the same problem as this if you could find that and mark it as a dup of this.
Comment 5 Caolán McNamara 2012-05-08 06:49:23 UTC
*** Bug 49364 has been marked as a duplicate of this bug. ***
Comment 6 Cor Nouws 2012-05-08 06:50:59 UTC
@caolan
(In reply to comment #4)
> caolanm->Cor: you had some other bug which was very like this hitting ESC in
> autocorrect options, which I couldn't reproduce at the time. It must be the
> same problem as this if you could find that and mark it as a dup of this.

AH, I remeber now that I had that thought late that night too ..

I confirm this is fixed in version 3.6.0alpha0+ Build ID: c2003c7