Resolves: fdo#49340 GetFocus during dtoring causes reentry to dying window

Change-Id: I79cf2dcd3e1126e95a8d89d7ebcfea0c06cbdb05